# RISCV-Simulator

./: .gitignore  CMakeLists.txt  EncodingTable.hpp  Executor.cpp  Executor.hpp  InstTag.hpp  Instruction.cpp  Instruction.hpp  Memory.hpp  README.md  Utility.hpp  config.hpp  main.cpp
data/: bulgarian.dump
docs/: Predicton.adoc
include/: Executor.hpp  InstTag.hpp  Instruction.hpp  Memory.hpp  Predictor.hpp  RegisterFile.hpp  Signals.hpp  Utility.hpp  config.hpp
lib/: Executor.cpp  Instruction.cpp  main.cpp  makefile
src/: Bits.hpp  Executor.cpp  Executor.hpp  InstTag.hpp  Instruction.cpp  Instruction.hpp  Memory.hpp  RegisterFile.hpp  Utility.hpp  Wire.hpp  config.hpp  main.cpp  makefile
src/Units/: Plexers.hpp  RegisterFile.hpp  Unit.hpp
